--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <title>ARTESANIAS SAN AGUSTIN</title>
     </head>
     <body>
-       <h1>"La única manera de lidiar con este mundo sin libertad es volverte tan absolutamente libre que tu mera existencia sea un acto de rebelión"</h1>
+       <h1>-# ARTESANIAS SAN AGUSTIN #-</h1>
+       <h2>"La única manera de lidiar con este mundo sin libertad es volverte tan absolutamente libre que tu mera existencia sea un acto de rebelión"</h2>
     </body>
     </html>
